5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4149/executions/1747_1538.log
== TEST (2019-05-16 11:11:47) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=1
i=0
n=k+1

if(-1<x<1 and k>0):
	while(i<n):
		soma=soma+(x**(i+1))*((-1)**i)
		i=i+1
print(round(soma,8))
-- OUTPUT:
1.32367104
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:12:06) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=1
i=0
n=k+1

if(-1<x<1 and k>0):
	while(i<n):
		soma=soma+(x**(i+1))*((-1)**i)
		i=i+1
print(round(soma,8))
-- OUTPUT:
1.32367104
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:12:31) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=1
i=0
n=k-1

if(-1<x<1 and k>0):
	while(i<n):
		soma=soma+(x**(i+1))*((-1)**i)
		i=i+1
print(round(soma,8))
-- OUTPUT:
1.2464
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:12:41) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=1
i=0
n=k-1

if(-1<x<1 and k>0):
	while(i<n):
		soma=soma+(x**(i+1))*((-1)**i)
		i=i+1
print(round(soma,8))
-- OUTPUT:
1.2464
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:13:49) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=1
i=0
n=k-1

if(-1<x<1 and k>0):
	while(i<n):
		soma=soma+(x**(i+1))*((-1)**i)
		i=i+1
print(round(soma,8))
-- OUTPUT:
1.2464
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:14:04) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=1
i=0
n=k-1

if(-1<x<1 and k>0):
	while(i<n):
		soma=soma+(x**(i+1))*((-1)**i)
		i=i+1
print(round(soma,8))
-- OUTPUT:
1.2464
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:17:56) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=1
i=0
n=k+1

if(-1<x<1 and k>0):
	while(n>i):
		soma=soma+(x**(i+1))*((-1)**j)
		i=i+1
		
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    soma=soma+(x**(i+1))*((-1)**j)
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:18:09) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=1
i=0
n=k+1

if(-1<x<1 and k>0):
	while(n>i):
		soma=soma+(x**(i+1))*((-1)**i)
		i=i+1
		
print(round(soma,8))
-- OUTPUT:
1.32367104
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:18:25) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=0
i=0
n=k+1

if(-1<x<1 and k>0):
	while(n>i):
		soma=soma+(x**(i+1))*((-1)**i)
		i=i+1
		
print(round(soma,8))
-- OUTPUT:
0.32367104
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:18:37) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=0
i=0
n=k+1

if(-1<x<1 and k>0):
	while(n>i):
		soma=soma+(x**(i+1))*((-1)**i)
		i=i+1
		
print(round(soma,8))
-- OUTPUT:
0.32367104
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:25:23) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=0
i=0
n=k-1
j=0
if(-1<x<1 and k>0):
	while(n>i):
		soma=soma+(x**(2*i))*((-1)**i)
		i=i+1
		
print(round(soma,8))
-- OUTPUT:
0.6864
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:25:43) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=0
i=0
n=k+1
j=0
if(-1<x<1 and k>0):
	while(n>i):
		soma=soma+(x**(2*i))*((-1)**i)
		i=i+1
		
print(round(soma,8))
-- OUTPUT:
0.75390398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:26:32) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=0
i=0
n=k+1
j=0
if(-1<x<1 and k>0):
	while(n>i):
		soma=soma+(x**(2*i))*((-1)**i)
		i=i+1
		
print(round(soma,8))
-- OUTPUT:
0.75390398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:26:45) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=0
i=0
n=k+1
j=0
if(-1<x<1 and k>0):
	while(n>i):
		soma=soma+(x**(2*i))*((-1)**i)
		i=i+1
		
	print(round(soma,8))
-- OUTPUT:
0.75390398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:26:52) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=0
i=0
n=k+1
j=0
if(-1<x<1 and k>0):
	while(n>i):
		soma=soma+(x**(2*i))*((-1)**i)
		i=i+1
		
	print(round(soma,8))
-- OUTPUT:
0.75390398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:27:54) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=0
i=0
n=k+1
while(n>i):
	soma=soma+(x**(2*i))*((-1)**i)
	i=i+1
		
print(round(soma,8))
-- OUTPUT:
0.75390398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:29:14) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=1
i=0
n=k+1
while(n>i):
	soma=soma+(x**(2*i))*((-1)**i)
	i=i+1
		
print(round(soma,8))
-- OUTPUT:
1.75390398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:30:17) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=0
i=0
n=k+1
while(n>i):
	soma=soma+(x**(2*i))*(-1)**i
	i=i+1
		
print(round(soma,8))
-- OUTPUT:
0.75390398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:30:32) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=0
i=0
n=k-1
while(n>i):
	soma=soma+(x**(2*i))*(-1)**i
	i=i+1
		
print(round(soma,8))
-- OUTPUT:
0.6864
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:30:44) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=1
i=0
n=k-1
while(n>i):
	soma=soma+(x**(2*i))*(-1)**i
	i=i+1
		
print(round(soma,8))
-- OUTPUT:
1.6864
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:02) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=1
i=0
n=k-1
while(n>i):
	soma=soma+(x**(2*i))*(-1)**i
	i=i+1
		
print(round(soma,8))
-- OUTPUT:
1.6864
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:31:28) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=1
i=0
n=k-1
while(n>i):
	soma=soma+(x**(2*i))*(-1)**i
	i=i+1
		
print(round(soma,8))
-- OUTPUT:
1.6864
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:32:10) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=1
i=0
n=k+1
while(i<n):
	soma=soma + (x**(2*i))*(-1)**i
	i=i+1
		
print(round(soma,8))
-- OUTPUT:
1.75390398
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:32:32) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=0
i=1
n=k+1
while(i<n):
	soma=soma + (x**(2*i))*(-1)**i
	i=i+1
		
print(round(soma,8))
-- OUTPUT:
-0.24609602
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:33:12) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=0
i=0
n=k+1
while(i<n):
	soma=(x**(2*i))*(-1)**i
	i=i+1
		
print(round(soma,8))
-- OUTPUT:
-0.03084098
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:33:33) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=0
i=0
n=k-1
while(i<n):
	soma=(x**(2*i))*(-1)**i
	i=i+1
		
print(round(soma,8))
-- OUTPUT:
-0.3136
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:33:58) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))

i=0
n=k-1
while(i<n):
	soma=(x**(2*i))*(-1)**i
	i=i+1
		
print(round(soma,8))
-- OUTPUT:
-0.3136
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:34:32) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=0
i=0
n=k-1
while(i<n):
	soma=soma+(x**(2*i))*(-1)**i
	i=i+1
		
print(round(soma,8))
-- EXECUTION TIME:
0.235202
-- TEST CASE 1:
---- input:
0.56
3
---- correct output:
0.78474496
---- user output:
0.6864
-- TEST CASE 2:
---- input:
0.62
4
---- correct output:
0.70656312
---- user output:
0.76336336
-- TEST CASE 3:
---- input:
0.56
2
---- correct output:
0.6864
---- user output:
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:53:41) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=0
i=0
n=k-1
while(i<n):
	soma=soma+(x**(2*i))*(-1)**i
	i=i+1
		
print(round(soma,8))
-- OUTPUT:
0.6864
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:54:08) 
-- CODE:
x=float(input("entre com um numero real"))
k=int(input("entre com a quantida de termos da serie:"))
soma=0
i=0
while(i<k):
	soma=soma+(x**(2*i))*(-1)**i
	i=i+1
		
print(round(soma,8))
-- EXECUTION TIME:
0.193126
-- TEST CASE 1:
---- input:
0.56
3
---- correct output:
0.78474496
---- user output:
0.78474496
-- TEST CASE 2:
---- input:
0.62
4
---- correct output:
0.70656312
---- user output:
0.70656312
-- TEST CASE 3:
---- input:
0.56
2
---- correct output:
0.6864
---- user output:
0.6864
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
